# resume-gap-analyzer

./: .gitignore  dev.sh  requirements.txt
backend/: database.py  docker-compose.yaml  main.py  migrate.py  model.py  models.py  pyproject.toml  requirements.txt  scoring.py  utils.py
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/api/: api.ts  client.ts  session.ts
frontend/src/components/: Navbar.tsx
frontend/src/pages/: AnalyticsPage.tsx  AnalyzePage.tsx  AuthPage.tsx  HistoryPage.tsx
frontend/src/types/: index.ts
